# testing_manager

./: CMakeLists.txt
src/: car.cpp  car.h  plane.cpp  plane.h
tests/: CMakeLists.txt
tests/car_test_src/: car_test.cpp  car_test.h  main.cpp
tests/plane_test_src/: main.cpp  plane_test.cpp  plane_test_src.h
